fixed issue with porfolio page items sticking out of the container.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,9 +15,6 @@ p {
   font-size: 1.2rem;
 }
 
-.center-this {
-  margin: 0 auto;
-}
 
 footer {
   background-color: #495464;
@@ -68,6 +65,25 @@ footer {
 /* used to make my name in navbar green. Also used to make green line above footer  */
 .bg-green {
   background-color: #1f6f8b;
+}
+
+/* centers the div horizontals */
+.center-this {
+  margin: 0 auto;
+}
+
+.container {
+  height: 200px;
+  position: relative;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 /* @media */
